# nimo-templates

./: LICENSE
clang/: .clang-format
esp32/: .clangd
opengl-example/: .clang-format  CMakeLists.txt  justfile  main.cpp  toolchain.cmake
